--- a/pom.xml
+++ b/pom.xml
@@ -119,4 +119,13 @@
 			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+    <profile>
+        <id>production</id>
+        <properties>
+            <env>production</env>
+        </properties>
+    </profile>
+</profiles>
+
 </project>
