--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # JWT
 jwt.secret=t5ZPmsnsmAkOQgqWj7090CwhzSCFKZDi
 jwt.expiration-ms=86400000
-server.port=8080
+server.port=${PORT:8080}
+
